--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "styled-component": "^2.8.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -27,6 +27,7 @@
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1",
     "postcss": "^8.4.21",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
