--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-    
   },
   "dependencies": {
+    "atom-react-preview": "^1.1.4",
+    "axios": "0.21.1",
     "click-to-react-component": "^1.0.8",
+    "openvidu-browser": "2.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -19,9 +21,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
-    "vite-plugin-svgr": "^2.4.0",
-    "axios": "0.21.1",
-    "openvidu-browser": "2.25.0"
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
