--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
+    "aframe": "^1.4.1",
     "axios": "0.21.1",
     "click-to-react-component": "^1.0.8",
+    "mind-ar": "^1.2.0",
     "openvidu-browser": "2.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
