--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "mind-ar": "^1.2.0",
     "openvidu-browser": "2.25.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
