--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.1",
   "main": "dist/index.js",
   "type": "module",
+  "browser": {
+    "child_process": false
+  },
   "scripts": {
     "dev": "vite",
     "build:vite": "tsc && vite build",
@@ -16,17 +19,18 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "aframe-react-component": "^0.1.1",
-    "lodash": "^4.17.21",
-    "mind-ar-ts": "^0.5.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/error-message": "^2.0.1",
     "@mui/material": "^5.11.6",
     "@reduxjs/toolkit": "^1.9.2",
-    "aframe": "^1.4.1",
+    "aframe": "^1.3.0",
+    "aframe-react-component": "^0.1.1",
     "axios": "0.21.1",
+    "child_process": "^1.0.2",
     "click-to-react-component": "^1.0.8",
+    "lodash": "^4.17.21",
+    "mind-ar-ts": "^0.5.7",
     "openvidu-browser": "2.25.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
@@ -45,23 +49,23 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@types/aframe": "^1.2.0",
     "@types/lodash": "^4.14.182",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.7.1",
-    "react-dropzone": "^14.2.1",
-    "typescript": "^4.6.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.32.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.7.1",
+    "react-dropzone": "^14.2.1",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4",
+    "typescript": "^4.6.3",
     "vite": "^4.0.0"
   },
   "description": "A Mind AR Modules for React",
