--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,7 +2,7 @@ server {
     #add_header Access-Control-Allow-Origin *;
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  i8b207.p.ssafy.io;
  
     location / {
         root    /app/dist;
