--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.0",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.1",
     "tailwind-scrollbar-hide": "^1.1.7"
