--- a/whiteboard-server/Dockerfile
+++ b/whiteboard-server/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD [ "sudo", "node", "index.js" ]
+CMD ["node", "index.js" ]
 EXPOSE 8081
