[UPDATE] Dockerfile sudo 명령어 추가

--- a/whiteboard-server/Dockerfile
+++ b/whiteboard-server/Dockerfile
@@ -3,5 +3,5 @@ COPY    package*.json ./
 RUN     npm install
 ARG     FILE=src/index.js
 COPY    ${FILE} index.js
-CMD ["node", "index.js" ]
+CMD ["sudo", "node", "index.js" ]
 EXPOSE 8081
