--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "cookie": "^0.5.0",
     "deepar": "^4.0.3",
     "fabric": "^5.3.0",
+    "html2canvas": "^1.4.1",
     "openvidu-browser": "2.25.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
