--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,9 +9,9 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace;
 
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://43.201.16.17:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://${datasource}/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=${username}
+spring.datasource.password=${userPwd}]
 
 #logger
 logging.level.root=info
@@ -24,8 +24,8 @@ jwt.access-expiration=3600000
 # unit is ms. 15 * 24 * 60 * 60 * 1000 = 15days
 jwt.refresh-expiration=1296000000
 
-OPENVIDU_URL=https://i8b207.p.ssafy.io:8443/
-OPENVIDU_SECRET=CHICK
+OPENVIDU_URL=${OPENVIDU_URL}
+OPENVIDU_SECRET={$OPENVIDU_SECRET}
 server.ssl.enabled=false
 
 mail.smtp.auth=true
