--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,7 +37,7 @@ mail.smtp.port=465
 mail.smtp.socketFactory.port=465
 
 # admin email
-AdminMail.id = kimchick207@gmail.com
+AdminMail.id = ${gmailid}
 AdminMail.password = ${gmailpassword}
 
 # monitoring
